--- a/index.html
+++ b/index.html
@@ -1,1 +1,210 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FREESERVER WebMap Portal</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap%27');
 
+        body {
+            background-image: url('https://cdn.discordapp.com/attachments/432877058218131458/811187633366499378/2020-12-17_15.22.16_2.png');
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center center;
+            font-family: 'sans-serif', 'serif';
+        }
+
+        div.links div.link-card h2,
+        header.logos span,
+        h2 {
+            font-family: Montserrat;
+        }
+
+        body {
+            margin: 0;
+            height: 100vh;
+            display: flex;
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        div.container {
+            display: inline-block;
+            margin: auto;
+
+            -wekit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
+            background-color: #ffffff25;
+            border-radius: 3px;
+            box-shadow: 1px 1px 5px #0000004d;
+            width: 900px;
+            overflow: scroll;
+        }
+
+        div.container::-webkit-scrollbar {
+            /* Chrome, Safari 対応 */
+            display: none;
+        }
+
+        header.logos {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 20px 0;
+        }
+
+        header.logos img.logo {
+            width: 40px;
+            height: 40px;
+        }
+
+        header.logos span {
+            font-size: 40px;
+            line-height: 40px;
+        }
+
+        div.links {
+            width: 100%;
+            display: flex;
+        }
+
+        div.links div.link-card {
+            flex: 1;
+        }
+
+        div.links div.link-card div.logo-container {
+            display: flex;
+            justify-content: center;
+            padding: 30px 0;
+        }
+
+        div.links div.link-card div.logo-container img {
+            width: 80px;
+            height: 80px;
+
+            border-radius: 50%;
+        }
+
+        div.links div.link-card h2 {
+            text-align: center;
+            margin-top: 0;
+        }
+
+        div.links div.link-card a {
+            color: inherit;
+        }
+
+        div.links div.link-card .description {
+            text-align: center;
+            padding: 0 10px 10px 010px;
+            background-blend-mode: overlay;
+        }
+
+        div.links div.link-card.pl3x {
+            background-color: #00800034;
+        }
+
+        div.links div.link-card.freeserver {
+            background-color: #5ababa34;
+        }
+
+        div.links div.link-card.bluemap {
+            background-color: #00009634;
+        }
+
+        @media screen and (max-width: 860px) {
+            div.links {
+                flex-direction: column;
+            }
+
+            div.container {
+                max-width: 400px;
+                margin: 20px auto;
+            }
+        }
+
+        *::selection {
+            background: #5ababaad;
+        }
+
+        small.copyright {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            color: rgb(0 0 0);
+        }
+    </style>
+    <script type="text/javascript">
+        window.addEventListener('load', async () => {
+            const date = new Date();
+            if (date.getMonth() === 3 && date.getDate() === 1) {
+                const bluemap = document.querySelector('.bluemap');
+                bluemap.querySelector('img').src = 'https://cdn.discordapp.com/icons/665868367416131594/a_c7557a320f4103101dabdd96cac9bf49.gif?size=256';
+                bluemap.querySelector('h2 a').textContent = 'RedMap';
+                bluemap.style.backgroundColor = '#96000034'
+            }
+            const { urls } = await (await fetch("//api.freeserver.pro/discord/images")).json();
+            const n = Math.floor(Math.random() * urls.length);
+            const elm = document.querySelector('body');
+            elm.style.backgroundImage = `url(${urls[n]})`;
+        });
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C16XZXQJ2K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-C16XZXQJ2K');
+    </script>
+</head>
+<body>
+    <div class="container">
+        <header class="logos">
+            <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
+                alt="" class="logo">
+            <span>FREESERVER</span>
+        </header>
+        <h2>WebMap Portal</h2>
+        <div class="links">
+            <div class="link-card pl3x">
+                <div class="logo-container">
+                    <img src="https://i.imgur.com/o0xchdG.png" alt="">
+                </div>
+                <h2><a href="//maps.freeserver.pro/pl3x/">Pl3xMap</a></h2>
+                <div class="description">
+                    2DのWebMapです
+                </div>
+            </div>
+            <div class="link-card freeserver">
+                <div class="logo-container">
+                    <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
+                        alt="">
+                </div>
+                <h2><a href="//freeserver.pro/">FREESERVER HP</a></h2>
+                <div class="description">
+                    FREESERVER公式ホームページです
+                </div>
+            </div>
+            <div class="link-card bluemap">
+                <div class="logo-container">
+                    <img src="https://www.spigotmc.org/data/resource_icons/83/83557.jpg?1599299324" alt="">
+                </div>
+                <h2><a href="//maps.freeserver.pro/bluemap/">BlueMap</a></h2>
+                <div class="description">
+                    新手のWebMapで自由度の高い <br>
+                    3D表示ができます
+                </div>
+            </div>
+        </div>
+    </div>
+    <small class="copyright">
+        &copy; 2017 FREESERVER Project<br>
+        <a href="https://freeserver.pro/privacy-policy/" target="_blank">Privacy Policy</a>
+    </small>
+</body>
