--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FREESERVER WebMap Portal</title>
-    <style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>FREESERVER WebMap Portal</title>
+        <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap%27');
 
         body {
@@ -137,74 +137,75 @@
             text-align: center;
             color: rgb(0 0 0);
         }
-    </style>
-    <script type="text/javascript">
-        window.addEventListener('load', async () => {
-            const date = new Date();
-            if (date.getMonth() === 3 && date.getDate() === 1) {
-                const bluemap = document.querySelector('.bluemap');
-                bluemap.querySelector('img').src = 'https://cdn.discordapp.com/icons/665868367416131594/a_c7557a320f4103101dabdd96cac9bf49.gif?size=256';
-                bluemap.querySelector('h2 a').textContent = 'RedMap';
-                bluemap.style.backgroundColor = '#96000034'
-            }
-            const { urls } = await (await fetch("//api.freeserver.pro/discord/images")).json();
-            const n = Math.floor(Math.random() * urls.length);
-            const elm = document.querySelector('body');
-            elm.style.backgroundImage = `url(${urls[n]})`;
-        });
-    </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C16XZXQJ2K"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+        </style>
+        <script type="text/javascript">
+            window.addEventListener('load', async () => {
+                const date = new Date();
+                if (date.getMonth() === 3 && date.getDate() === 1) {
+                    const bluemap = document.querySelector('.bluemap');
+                    bluemap.querySelector('img').src = 'https://cdn.discordapp.com/icons/665868367416131594/a_c7557a320f4103101dabdd96cac9bf49.gif?size=256';
+                    bluemap.querySelector('h2 a').textContent = 'RedMap';
+                    bluemap.style.backgroundColor = '#96000034'
+                }
+                const { urls } = await (await fetch("//api.freeserver.pro/discord/images")).json();
+                const n = Math.floor(Math.random() * urls.length);
+                const elm = document.querySelector('body');
+                elm.style.backgroundImage = `url(${urls[n]})`;
+            });
+        </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-C16XZXQJ2K"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
 
-        gtag('config', 'G-C16XZXQJ2K');
-    </script>
-</head>
-<body>
-    <div class="container">
-        <header class="logos">
-            <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
-                alt="" class="logo">
-            <span>FREESERVER</span>
-        </header>
-        <h2>WebMap Portal</h2>
-        <div class="links">
-            <div class="link-card pl3x">
-                <div class="logo-container">
-                    <img src="https://i.imgur.com/o0xchdG.png" alt="">
+            gtag('config', 'G-C16XZXQJ2K');
+        </script>
+    </head>
+    <body>
+        <div class="container">
+            <header class="logos">
+                <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
+                    alt="" class="logo">
+                <span>FREESERVER</span>
+            </header>
+            <h2>WebMap Portal</h2>
+            <div class="links">
+                <div class="link-card pl3x">
+                    <div class="logo-container">
+                        <img src="https://i.imgur.com/o0xchdG.png" alt="">
+                    </div>
+                    <h2><a href="//maps.freeserver.pro/pl3x/">Pl3xMap</a></h2>
+                    <div class="description">
+                        2DのWebMapです
+                    </div>
                 </div>
-                <h2><a href="//maps.freeserver.pro/pl3x/">Pl3xMap</a></h2>
-                <div class="description">
-                    2DのWebMapです
+                <div class="link-card freeserver">
+                    <div class="logo-container">
+                        <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
+                            alt="">
+                    </div>
+                    <h2><a href="//freeserver.pro/">FREESERVER HP</a></h2>
+                    <div class="description">
+                        FREESERVER公式ホームページです
+                    </div>
                 </div>
-            </div>
-            <div class="link-card freeserver">
-                <div class="logo-container">
-                    <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
-                        alt="">
-                </div>
-                <h2><a href="//freeserver.pro/">FREESERVER HP</a></h2>
-                <div class="description">
-                    FREESERVER公式ホームページです
-                </div>
-            </div>
-            <div class="link-card bluemap">
-                <div class="logo-container">
-                    <img src="https://www.spigotmc.org/data/resource_icons/83/83557.jpg?1599299324" alt="">
-                </div>
-                <h2><a href="//maps.freeserver.pro/bluemap/">BlueMap</a></h2>
-                <div class="description">
-                    新手のWebMapで自由度の高い <br>
-                    3D表示ができます
+                <div class="link-card bluemap">
+                    <div class="logo-container">
+                        <img src="https://www.spigotmc.org/data/resource_icons/83/83557.jpg?1599299324" alt="">
+                    </div>
+                    <h2><a href="//maps.freeserver.pro/bluemap/">BlueMap</a></h2>
+                    <div class="description">
+                        新手のWebMapで自由度の高い <br>
+                        3D表示ができます
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <small class="copyright">
-        &copy; 2017 FREESERVER Project<br>
-        <a href="https://freeserver.pro/privacy-policy/" target="_blank">Privacy Policy</a>
-    </small>
-</body>
+        <small class="copyright">
+            &copy; 2017 FREESERVER Project<br>
+            <a href="https://freeserver.pro/privacy-policy/" target="_blank">Privacy Policy</a>
+        </small>
+    </body>
+</html>
