--- a/index.html
+++ b/index.html
@@ -4,140 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FREESERVER WebMap Portal</title>
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap%27');
-
-        body {
-            background-image: url('https://cdn.discordapp.com/attachments/432877058218131458/811187633366499378/2020-12-17_15.22.16_2.png');
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center center;
-            font-family: 'sans-serif', 'serif';
-        }
-
-        div.links div.link-card h2,
-        header.logos span,
-        h2 {
-            font-family: Montserrat;
-        }
-
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-        }
-
-        h2 {
-            text-align: center;
-        }
-
-        div.container {
-            display: inline-block;
-            margin: auto;
-
-            -wekit-backdrop-filter: blur(2px);
-            backdrop-filter: blur(2px);
-            background-color: #ffffff25;
-            border-radius: 3px;
-            box-shadow: 1px 1px 5px #0000004d;
-            width: 900px;
-            overflow: scroll;
-        }
-
-        div.container::-webkit-scrollbar {
-            /* Chrome, Safari 対応 */
-            display: none;
-        }
-
-        header.logos {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            padding: 20px 0;
-        }
-
-        header.logos img.logo {
-            width: 40px;
-            height: 40px;
-        }
-
-        header.logos span {
-            font-size: 40px;
-            line-height: 40px;
-        }
-
-        div.links {
-            width: 100%;
-            display: flex;
-        }
-
-        div.links div.link-card {
-            flex: 1;
-        }
-
-        div.links div.link-card div.logo-container {
-            display: flex;
-            justify-content: center;
-            padding: 30px 0;
-        }
-
-        div.links div.link-card div.logo-container img {
-            width: 80px;
-            height: 80px;
-
-            border-radius: 50%;
-        }
-
-        div.links div.link-card h2 {
-            text-align: center;
-            margin-top: 0;
-        }
-
-        div.links div.link-card a {
-            color: inherit;
-        }
-
-        div.links div.link-card .description {
-            text-align: center;
-            padding: 0 10px 10px 010px;
-            background-blend-mode: overlay;
-        }
-
-        div.links div.link-card.pl3x {
-            background-color: #00800034;
-        }
-
-        div.links div.link-card.freeserver {
-            background-color: #5ababa34;
-        }
-
-        div.links div.link-card.bluemap {
-            background-color: #00009634;
-        }
-
-        @media screen and (max-width: 860px) {
-            div.links {
-                flex-direction: column;
-            }
-
-            div.container {
-                max-width: 400px;
-                margin: 20px auto;
-            }
-        }
-
-        *::selection {
-            background: #5ababaad;
-        }
-
-        small.copyright {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            color: rgb(0 0 0);
-        }
-        </style>
+        <link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'">
         <script type="text/javascript">
             window.addEventListener('load', async () => {
                 const date = new Date();
