--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="logo-container">
                         <img src="https://i.imgur.com/o0xchdG.png" alt="">
                     </div>
-                    <h2><a href="//maps.freeserver.pro/pl3x/">Pl3xMap</a></h2>
+                    <h2><a href="//pl3x.freeserver.pro/">Pl3xMap</a></h2>
                     <div class="description">
                         2DのWebMapです
                     </div>
@@ -62,7 +62,7 @@
                     <div class="logo-container">
                         <img src="https://www.spigotmc.org/data/resource_icons/83/83557.jpg?1599299324" alt="">
                     </div>
-                    <h2><a href="//maps.freeserver.pro/bluemap/">BlueMap</a></h2>
+                    <h2><a href="//bluemap.freeserver.pro/">BlueMap</a></h2>
                     <div class="description">
                         新手のWebMapで自由度の高い <br>
                         3D表示ができます
