--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FREESERVER WebMap Portal</title>
-        <link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'">
+        <link rel="stylesheet" href="/style.css">
         <script type="text/javascript">
             window.addEventListener('load', async () => {
                 const date = new Date();
