--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <body>
         <div class="container">
             <header class="logos">
-                <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
+                <img src="/assets/img/logo.webp"
                     alt="" class="logo">
                 <span>FREESERVER</span>
             </header>
@@ -41,7 +41,7 @@
             <div class="links">
                 <div class="link-card pl3x">
                     <div class="logo-container">
-                        <img src="https://i.imgur.com/o0xchdG.png" alt="">
+                        <img src="/assets/img/pl3x.webp" alt="">
                     </div>
                     <h2><a href="//pl3x.freeserver.pro/">Pl3xMap</a></h2>
                     <div class="description">
@@ -50,8 +50,7 @@
                 </div>
                 <div class="link-card freeserver">
                     <div class="logo-container">
-                        <img src="https://media.discordapp.net/attachments/608326602807312395/715050927345893426/2-alpha.png?width=1048&height=1048"
-                            alt="">
+                        <img src="/assets/img/logo.webp" alt="">
                     </div>
                     <h2><a href="//freeserver.pro/">FREESERVER HP</a></h2>
                     <div class="description">
@@ -60,7 +59,7 @@
                 </div>
                 <div class="link-card bluemap">
                     <div class="logo-container">
-                        <img src="https://www.spigotmc.org/data/resource_icons/83/83557.jpg?1599299324" alt="">
+                        <img src="/assets/img/bluemap.webp" alt="">
                     </div>
                     <h2><a href="//bluemap.freeserver.pro/">BlueMap</a></h2>
                     <div class="description">
